sample/retrieveUnpackaged/objects/Activity_Process_Equipment_Breakdown__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Process_Equipment__c</fullName>
        <label>Activity/Process/Equipment</label>
        <picklist>
            <picklistValues>
                <fullName>Animal use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boiler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building and Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean in Place (CIP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooling tower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dairy shed and milk vat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Residence - not accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaporative Cooling/chillers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Service / Sprinkler Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Preparation, cooking, dishwashing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food production/ washing for production (not irrigation)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irrigation/plant watering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laundry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pool and backwash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sterilising equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taps, showers, toilets, urinals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle washing/ cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washdown equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water into product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Water_Use__c</fullName>
        <label>Percentage of Water Use</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Specify_Other__c</fullName>
        <label>Specify Other</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF(BEGINS(TEXT(Activity_Process_Equipment__c), &apos;Other&apos;),  Specify_Other__c ,  TEXT(Activity_Process_Equipment__c) )</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Universal_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Universal Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WaterMAP__c</fullName>
        <label>WaterMAP</label>
        <referenceTo>WaterMAP__c</referenceTo>
        <relationshipName>Activity_Process_Equipment_Breakdown</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Water Using Equipment/Process</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Activity/Process/Equipment Breakdown #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Water Using Equipment/Processes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>